FCS-521: Bulk case actions page (#254)